// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Base should render correctly as a section 1`] = `
<div>
  <section
    class="base-class"
  />
</div>
`;

exports[`Testing Base should render correctly for a defaultClass 1`] = `
<div>
  <div
    class="base-class"
  />
</div>
`;

exports[`Testing Base should render correctly with an other className 1`] = `
<div>
  <div
    class="base-class other-class"
  />
</div>
`;
